# AIAgentsTest

./: .gitignore  autgon_agents.txt  incident.txt  mitigation_report.txt  readme.md
code/CS/multiagent/: .gitignore  AgentFactory.cs  MyRolePlayOrchestrator.cs  Program.cs  SemKernal.cs  SpecialRolePlayOrchestrator.cs  SystemMessages.cs  TypeSafeFunctionCall._cs  Websearch._cs  multiagent.csproj  readme.md
code/CS/multiagent/Plugins/: FilePlugin.cs  FolderPlugin.cs  LocalTimePlugin.cs  PdfOperator.cs  WeatherPlugin.cs  pdfExtraction.cs
code/Python/: AISearch.py  codewriter.py  guessing.py  incidents.py  pyproject.toml  requirements.txt
